# babel-read

./: .gitignore  README.md  package.json
src/: app.tsx  global-state.ts  main.tsx  overlay.tsx  router.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: capture.rs  hook.rs  lib.rs  main.rs  windows.rs
src-tauri/src-python/: main.py
src/components/: indicator.tsx
