[package]
name = "babel-read"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "babel_read_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rdev = "0.5.3"
image = { version = "0.24", features = ["webp"] }
base64 = "0.21"
tokio = { version = "1.0", features = ["time"] }
anyhow = "1.0.86"
rayon = "1.7"
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61.1", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Memory",
    "Win32_System_WinRT",
    "Media_Ocr",
    "Storage",
    "Storage_Streams",
    "Graphics_Imaging",
    "Globalization"
] }
tauri-plugin-python = { version="0.3", features = ["pyo3"] }

